--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "styled-components": "^6.1.8"
+    "react-toastify": "^10.0.4",
+    "styled-components": "^6.1.8",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.12.0",
